@@ -159,28 +159,28 @@
     );
 
     SOGoCalendarCategoriesColors = {
-        "Customer" = "#CCCCCC";
-        "Calls" = "#FFCC33";
-        "Favorites" = "#CCCCCC";
-        "Meeting" = "#CCCCCC";
-        "Ideas" = "#CCCCCC";
-        "Miscellaneous" = "#CCCCCC";
-        "Birthday" = "#CCCCCC";
-        "Anniversary" = "#CCCCCC";
-        "Vacation" = "#CCCCCC";
-        "Travel" = "#CCCCCC";
-        "Projects" = "#CCCCCC";
-        "Suppliers" = "#CCCCCC";
-        "Gifts" = "#CCCCCC";
-        "Clients" = "#CCCCCC";
-        "Issues" = "#CCCCCC";
-        "Business" = "#CCCCCC";
-        "Holidays" = "#CCCCCC";
-        "Personal" = "#CCCCCC";
-        "Status" = "#CCCCCC";
-        "Competition" = "#CCCCCC";
-        "Follow up" = "#CCCCCC";
-        "Public Holiday" = "#CCCCCC";
+        "Customer" = "#F8D800";
+        "Calls" = "#0396FF";
+        "Favorites" = "#EA5455";
+        "Meeting" = "#7367F0";
+        "Ideas" = "#32CCBC";
+        "Miscellaneous" = "#F6416C";
+        "Birthday" = "#28C76F";
+        "Anniversary" = "#9F44D3";
+        "Vacation" = "#623AA2";
+        "Travel" = "#F55555";
+        "Projects" = "#8C1BAB";
+        "Suppliers" = "#9708CC";
+        "Gifts" = "#736EFE";
+        "Clients" = "#E96D71";
+        "Issues" = "#3677FF";
+        "Business" = "#FA016D";
+        "Holidays" = "#0E197D";
+        "Personal" = "#DE4313";
+        "Status" = "#002661";
+        "Competition" = "#6018DC";
+        "Follow up" = "#D939CD";
+        "Public Holiday" = "#E80505";
     };
 
     SOGoSubscriptionFolderFormat = "%{FolderName} (%{UserName} <%{Email}>)";
