@@ -237,6 +237,7 @@
 "Calendar Category" = "Calendar Category";
 "Add Calendar Category" = "Add Calendar Category";
 "New category" = "New category";
+"Reset to defaults" = "Reset to defaults";
 "Remove Calendar Category" = "Remove Calendar Category";
 "Contact Category" = "Contact Category";
 "Add Contact Category" = "Add Contact Category";
